<resources>
    <string name="app_name">Accelerometer &amp; Firebase</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>

    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>

    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="interval_1s">1s</string>
    <string name="interval_2s">2s</string>
    <string name="interval_5s">5s</string>
    <string name="interval_10s">10s</string>
    <string name="set_interval">Set interval</string>
    <string name="set_recording_time">Set recording interval</string>
    <string name="start_recording_time">Start in time</string>
    <string name="set_recording_duration">Set recording duration</string>
    <string name="duration_1m">1m</string>
    <string name="duration_2m">2m</string>
    <string name="duration_5m">5m</string>
    <string name="duration_10m">10m</string>
    <string name="choose_time">Choose time</string>
    <string name="clean_db">Clean DB</string>
    <string name="detail_activity">Detail Activity</string>
    <string name="start_time">StartTime</string>
    <string name="session_duration">session_duration</string>
    <string name="session_interval">session_interval</string>
    <string name="duration">"duration %1$ds"</string>
    <string name="notification_title">Accelerometer collect your data</string>
    <string name="notification_text">Service is running</string>
    <string name="load_file">Upload file</string>
    <string name="run_accelerometer">Accelerometer</string>
    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>
    <string name="progress_uploading">Uploading…</string>
</resources>
