<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_interval"
        android:enabled="true"
        android:title="@string/set_interval"
        android:titleCondensed="Areas"
        android:visible="true">
        <menu>
            <item
                android:id="@+id/interval_1s"
                android:title="@string/interval_1s"/>
            <item
                android:id="@+id/interval_2s"
                android:title="@string/interval_2s"/>
            <item
                android:id="@+id/interval_5s"
                android:title="@string/interval_5s"/>
            <item
                android:id="@+id/interval_10s"
                android:title="@string/interval_10s"/>

        </menu>
    </item>
    <item
        android:id="@+id/start_recording_time"
        android:title="@string/start_recording_time"
        android:visible="true"
        app:showAsAction="never"/>
    <item
        android:id="@+id/recording_duration"
        android:title="@string/set_recording_duration"
        android:visible="true"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/duration_1m"
                android:title="@string/duration_1m"/>
            <item
                android:id="@+id/duration_2m"
                android:title="@string/duration_2m"/>
            <item
                android:id="@+id/duration_5m"
                android:title="@string/duration_5m"/>
            <item
                android:id="@+id/duration_10m"
                android:title="@string/duration_10m"/>

        </menu>
    </item>
    <item
        android:id="@+id/action_logout"
        android:title="@string/menu_logout"
        android:visible="true"
        app:showAsAction="never"/>
</menu>
