<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:padding="10dp"
              android:weightSum="6">

    <TextView
        android:id="@+id/session_start_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:layout_gravity="center_vertical"
        android:text="@string/start_time"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/session_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_duration"/>

        <TextView
            android:id="@+id/session_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_interval"/>
    </LinearLayout>

</LinearLayout>